--- a/src/app/writing/content/build-rlhf.mdx
+++ b/src/app/writing/content/build-rlhf.mdx
@@ -4,7 +4,7 @@ date: "2024-02-18"
 description: "Forget Human Labelers"
 ---
 
-You know, that thing OpenAI used to make GPT3.5 into ChatGPT? You can do the same without asking strangers to rank statements.
+You know that thing OpenAI used to make GPT3.5 into ChatGPT? You can do the same without asking strangers to rank statements.
 
 I would never have put my finger on the next big revolution in AI happening on the text front. As an early adopter of the BERT models in 2017, I hadn’t exactly been convinced computers could interpret human language with similar granularity and contextuality as people do. Since then, 3 larger breakthroughs have formed the Textual Revolution:
 
