--- a/src/app/writing/content/cosmos.mdx
+++ b/src/app/writing/content/cosmos.mdx
@@ -4,7 +4,7 @@ date: "2024-29-02"
 description: "Our relationship to planet Earth"
 ---
 
-Through a little blob in the cosmos, an infinitely-expanding universe had been unfurled and within it a small yellow star we now call the Sun ensued gravity upon little rocks of stardust that subsequently formed silicone plates and methane clouds.
+Through a little blob in the cosmos, an infinitely-expanding universe unfurled and within it a small yellow star we now call the Sun ensued gravity upon little rocks of stardust that subsequently formed silicone plates and methane clouds.
 
 Among these is the Earth — the little blue planet we so tightly grasp on. Inside the blueish waters, simple organic molecules gradually assembled, leading to the formation of self-replicating entities. Life emerged. Sporadic waters filled with prokaryotic bacteria exploded. Around 3 billion years ago, these prokaryotes learned to harness sunlight to extract oxygen and water — a process we now know as photosynthesis.
 
