complementing the thoughts

--- a/src/app/writing/content/collection-of-thoughts-1.mdx
+++ b/src/app/writing/content/collection-of-thoughts-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Mental games, low expectations, and capitalism"
-date: "2025-17-01"
+date: "2025-01-17"
 description: "collection of thoughts"
 ---
 
@@ -8,7 +8,23 @@ description: "collection of thoughts"
 - Speed is not determinant of company's success. It is velocity, speed in a given direction.
 - Early distribution → start with a wide funnel & maximize views -> signups. With traction, you’ll identify who sees your product as indispensable, & that’s where you build meaningful retention.
 - Science is prove it, and I’ll believe you. Faith is believe it, and I will prove you.
+- The greatest originals are the ones who fail the most, because they’re the ones who try the most.
+- Lazy people spend their time thinking about how they can get other people to accomplish things for them.
+    - Driven people spend their time thinking about how they can accomplish things for themselves and others.
+    - Entrepreneurs think about how they can get driven people to accomplish things for lazy people while paying the driven people X and charging the lazy people X + 25%.
+    - The people who build wealth in this world help both lazy people and driven people accomplish their goals and make a killing while they’re at it.
 - Your brain is not merely a record of the past, it’s also the map of the future. It goes where attention flows.
+- Time is not endless, but we could say it’s constant for the majority. How you experience time varies. One can live a more fulfilled life by being more present.
+- A brand is created when your values resonate with people.
+- A stronger LLM should evaluate the weaker one.
+- The most important mindset shift Europeans can adapt from Americans is that those who are delusional enough about what is possible are the ones who actually change the world.
+- We're all running on borrowed time.
+- Men use conversation for factuality checks, women use conversation to relieve their insecurities, to validate their feelings.
+- We all maximize feeling good — what the ego feeds the mind to do to protect itself. We feel good when our likelihood of future of survival is high. I long couldn’t connect the two.
+- Intelligence may be how well an entity can govern its conditional probability to maximize an objective, most likely for human beings is to maximize entropy production. It seems there's some higher-level mechanics optimization at play. Similar answer for why life needs to survive. Perhaps life emerging is a natural byproduct of 1000s of experiments of prokaryutes entering higher-entropy states.
+- I believe that one of the biggest misconceptions of Silicon Valley is that you pick a vertical niche, solve a problem better, then scale. Google didn't just make search 1.5x better for any particular niche. You win by building something 10 magnitudes better than anything seen before.
+- Companies claiming to disrupt the $100T real-estate market are missing a fundamental piece. I think Silicon Valley is in a thought bubble thinking technology can solve the world 100%. We do not live in a digital world. That would be the metaverse. We live in a physical world. We can say we live in a digitally-complemented world (frankly to a high-degree). Even if you perfectly increase productivity of 50% of real-estate operations, you will get 20% of wealth created in real-estate because whoever owns properties is giving you that margin out of his profits. Value exchanges still belong to people. Tech just facilitates them (sometimes). 
+- My entire life philosophy is when you laugh, you laugh the hardest, when you hug someone, you hug them the strongest, when you speak to someone, you attend to them fully, when you work, you work, when you kiss your lady, you kiss her like it’s your last time, and when you live, you live to the max. You give it your all.
 - What I look for in people: high integrity, high intelligence, high energy, lowest of expectations for what life should be. 
 - Boys are interested in games and objects while girls are interested in people and relationships.
 - You can’t actually train for 5 hours straight. There’s not enough muscle volume to be exerted. Building muscle is oddly a capped game — but there’s still so much you can maximize — sleep, diet, training technique.
