--- a/src/app/writing/content/collection-of-thoughts-1.mdx
+++ b/src/app/writing/content/collection-of-thoughts-1.mdx
@@ -20,7 +20,7 @@ description: "collection of thoughts"
 - The most important mindset shift Europeans can adapt from Americans is that those who are delusional enough about what is possible are the ones who actually change the world.
 - We're all running on borrowed time.
 - Men use conversation for factuality checks, women use conversation to relieve their insecurities, to validate their feelings.
-- We all maximize feeling good — what the ego feeds the mind to do to protect itself. We feel good when our likelihood of future of survival is high. I long couldn’t connect the two.
+- We all maximize feeling good — what the ego feeds the mind to do to protect itself. We feel good when our likelihood of future survival is high. I long couldn’t connect the two.
 - Intelligence may be how well an entity can govern its conditional probability to maximize an objective, most likely for human beings is to maximize entropy production. It seems there's some higher-level mechanics optimization at play. Similar answer for why life needs to survive. Perhaps life emerging is a natural byproduct of 1000s of experiments of prokaryutes entering higher-entropy states.
 - I believe that one of the biggest misconceptions of Silicon Valley is that you pick a vertical niche, solve a problem better, then scale. Google didn't just make search 1.5x better for any particular niche. You win by building something 10 magnitudes better than anything seen before.
 - Companies claiming to disrupt the $100T real-estate market are missing a fundamental piece. I think Silicon Valley is in a thought bubble thinking technology can solve the world 100%. We do not live in a digital world. That would be the metaverse. We live in a physical world. We can say we live in a digitally-complemented world (frankly to a high-degree). Even if you perfectly increase productivity of 50% of real-estate operations, you will get 20% of wealth created in real-estate because whoever owns properties is giving you that margin out of his profits. Value exchanges still belong to people. Tech just facilitates them (sometimes). 
