deep-research-article

--- a/src/app/writing/content/build-rlhf.mdx
+++ b/src/app/writing/content/build-rlhf.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Build Your Own RLHF LLM"
 date: "2024-02-18"
-description: "Forget Human Labelers"
+description: "designing rlhf without human labelers"
 ---
 
 You know that thing OpenAI used to make GPT3.5 into ChatGPT? You can do the same without asking strangers to rank statements.
