--- a/src/app/writing/content/rag-llm-as-a-judge.mdx
+++ b/src/app/writing/content/rag-llm-as-a-judge.mdx
@@ -1,7 +1,7 @@
 ---
 title: "RAG Evaluation with LLM-as-a-Judge + Synthetic Dataset Creation"
 date: "2024-03-09"
-description: "How to build self-evaluating LLM pipelines"
+description: "how to build self-evaluating LLM pipelines"
 ---
 
 ### Forget Custom Human QA Pairs
