--- a/src/app/writing/content/skill-to-business.mdx
+++ b/src/app/writing/content/skill-to-business.mdx
@@ -1,7 +1,7 @@
 ---
 title: "3 Steps to Turn a Skill into a Sellable Business"
 date: "2024-01-30"
-description: "A guide for (younger) people on how to find their craft, and turn it into a sellable business."
+description: "a guide for (younger) people on how to find their craft, and turn it into a sellable business"
 ---
 
 In today’s era, seizing the opportunity to build your ideal life and achieve rapid financial growth has never been more accessible. However, amidst the vast sea of online information, I understand the challenge of distilling actionable guidelines. In this article, I present a clear and repeatable three-step process for establishing a profitable entrepreneurial career, without the need to dwell in your garage until you catch the attention of giants like Google.
