--- a/src/app/writing/content/liquidnn.mdx
+++ b/src/app/writing/content/liquidnn.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Build Your Own Liquid Neural Network with PyTorch"
 date: "2024-09-04"
-description: "Neural networks that learn and adapt in real-time."
+description: "neural networks that learn and adapt in real-time"
 ---
 
 For the past 35 years, we have built these probabilistic models that output predictions based on data and learned parameters(θ). Each neuron is a logistic regression gate ...
