--- a/src/app/writing/content/deep-research-agi.mdx
+++ b/src/app/writing/content/deep-research-agi.mdx
@@ -19,7 +19,7 @@ We need to rethink what it means for an entity to possess deep research capabili
 Okay, so what would true deep research capabilities look like?
 Let's start from first principles:
 
-1. **What is an entity knowledgeable?** *Knowledge is unique understanding that once applied produces a desired outcome.* In that sense, I have no knowledge of quantum mechanics, therefore, any result of applying my knowledge would be a lost vector. **Declarative knowledge infers an axiom of understanding.** If I say that man first landed on the moon on July 20th, 1969, that's a declarative knowledge. It's a true observation on some abstraction layer that if used correctly can move a given objective closer to its objective. **You usually don't get paid for knowing facts.** The second form of knowledge is imperative - it's a procedural understanding of how to get things done. A chef has imperative knowledge over how to build a meal, an engineer over how to build a rocket, and a writer on how to structure a book. **The more contextually-relevant and the more accurate your imperative knowledge, the more you can arbitrage it in the paid world.** Suddenly, you understand how and when to use learned imperative knowledge, and more importantly what underlying declarative knowledge = information is required to answer / think about that subset of problems. **You might refer this mechanism to a mental model - a framework of thinking about a given problem that results in a net benefit.**
+1. **What is an entity knowledgeable?** *Knowledge is unique understanding that once applied produces a desired outcome.* In that sense, I have no knowledge of quantum mechanics, therefore, any result of applying my knowledge would be a lost vector. **Declarative knowledge infers an axiom of understanding.** If I say that man first landed on the moon on July 20th, 1969, that's declarative knowledge. It's a true observation on some abstraction layer that if used correctly can move a given objective closer to its objective. **You usually don't get paid for knowing facts.** The second form of knowledge is imperative - it's a procedural understanding of how to get things done. A chef has imperative knowledge over how to build a meal, an engineer over how to build a rocket, and a writer on how to structure a book. **The more contextually-relevant and the more accurate your imperative knowledge, the more you can arbitrage it in the paid world.** Suddenly, you understand how and when to use learned imperative knowledge, and more importantly what underlying declarative knowledge = information is required to answer / think about that subset of problems. **You might refer this mechanism to a mental model - a framework of thinking about a given problem that results in a net benefit.**
 
 2. That's why OpenAI's deep research is not an intelligent form of research. 1) It applies the same DFS-like information exploration network = nexus for all possible research queries. 2) It fails in finding verified and contextually-relevant declarative knowledge to conform to the imperative structure created (which is not necessarily an easy problem to solve). 3) It does not understand the entirery of constrained context in which the research query was made, and how - if applicable - could help the researcher answer their research objective.
 
