--- a/src/app/writing/content/deep-research-agi.mdx
+++ b/src/app/writing/content/deep-research-agi.mdx
@@ -4,9 +4,7 @@ date: "2025-09-04"
 description: "what do true deep research capabilities mean?"
 ---
 
-The name is unfortunate. If anything, OpenAI has built extended search capabilities. So did Perplexity. So did Google, etc. 
-
-We need to rethink what it means for an entity to possess deep research capabilities. Current implementations fail short in these ways:
+The name is unfortunate. If anything, OpenAI built extended search capabilities. We need to rethink what it means for an entity to possess deep research capabilities. Current implementations fail short in these ways:
 
 - Data retrieval/search results - are contextually irrelevant, often plain wrong due to unverified sources
 - The graph exploration process - is limited by LLMs' inherent attribute that performance is only as good as its underlying conditional probability. That's why prompt engineering is a real thing. Therefore, to reach learning curve gains, one must constrain the language models in ways that conform to the idiosyncratic research parameters of the one performing research.
@@ -14,10 +12,9 @@ We need to rethink what it means for an entity to possess deep research capabili
 
 ---
 
-### What Would True Deep Research Look Like?
+### Path to AGI
 
-Okay, so what would true deep research capabilities look like?
-Let's start from first principles:
+Sampling from a Probability Distribution -> Search -> Deep Research -> AGI. Starting from the beginning:
 
 1. **What is an entity knowledgeable?** *Knowledge is unique understanding that once applied produces a desired outcome.* In that sense, I have no knowledge of quantum mechanics, therefore, any result of applying my knowledge would be a lost vector. **Declarative knowledge infers an axiom of understanding.** If I say that man first landed on the moon on July 20th, 1969, that's declarative knowledge. It's a true observation on some abstraction layer that if used correctly can move a given objective closer to its objective. **You usually don't get paid for knowing facts.** The second form of knowledge is imperative - it's a procedural understanding of how to get things done. A chef has imperative knowledge over how to build a meal, an engineer over how to build a rocket, and a writer on how to structure a book. **The more contextually-relevant and the more accurate your imperative knowledge, the more you can arbitrage it in the paid world.** Suddenly, you understand how and when to use learned imperative knowledge, and more importantly what underlying declarative knowledge = information is required to answer / think about that subset of problems. **You might refer this mechanism to a mental model - a framework of thinking about a given problem that results in a net benefit.**
 
@@ -25,7 +22,7 @@ Let's start from first principles:
 
 3. ***Nexus*** - a converging information network that once converges, results in knowledge. Speed of convergence determines how fast that knowledge can take effect. Nexus' depth + accuracy determine how much value the resulting knowledge has in the real world. An economist that can comprehend how Trump's tarrifs will implicate the changing world order in the next year with incredible depth and accuracy holds great knowledge.
 
-4. *Intelligence* - In that sense, the deep researcher's "intelligence" is its ability to govern its own conditional probability to convert the constrained research problem into maximizing the possibility to reaching knowledge in answering the true underlying research objective.
+4. *Intelligence* - In that sense, deep researcher's "intelligence" must be defined by its ability to govern its own conditional probability to convert the constrained research problem into maximizing the possibility to reaching knowledge in answering the true underlying research objective.
 
 5. ***AGI*** - this might be AGI then: an intelligence capable of both identifying optimal research objectives and self-optimizing to build the most effective context graphs to navigate. That's what we're trying to achieve with this project.
 
